@@ -1,8 +1,10 @@
 [Desktop Entry]
 Name=QjackCtl
+GenericName=JACK Control
 Comment=QjackCtl is a JACK Audio Connection Kit Qt GUI Interface
 Exec=@ac_prefix@/bin/qjackctl
 Icon=@ac_prefix@/share/pixmaps/qjackctl.png
-Categories=Applications;Multimedia;AudioVideo;MIDI;JACK;ALSA;Qt;
+Categories=Audio;AudioVideo;MIDI;JACK;ALSA;Qt;
 Terminal=false
 Type=Application
+X-SuSE-translate=true
